[gd_scene load_steps=2 format=3 uid="uid://cinf56ablkb8c"]

[ext_resource type="Script" path="res://Inventory/item_context_menu.gd" id="1_muo7o"]

[node name="ItemContextMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 260.0
offset_bottom = 350.0
script = ExtResource("1_muo7o")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.92549, 0.87451, 0.8, 1)

[node name="ActionList" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
allow_search = false
item_count = 1
item_0/text = "Feed to Party"

[connection signal="item_clicked" from="ActionList" to="." method="_on_action_list_item_clicked"]
[connection signal="mouse_entered" from="ActionList" to="." method="_on_action_list_mouse_entered"]
[connection signal="mouse_exited" from="ActionList" to="." method="_on_action_list_mouse_exited"]
